Bug 67848 - Creating an auto-named snapshot aborts PID 1
Summary: Creating an auto-named snapshot aborts PID 1
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium major
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-06 23:41 UTC by Dave Reisner
Modified: 2013-08-07 02:05 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Dave Reisner 2013-08-06 23:41:37 UTC
Steps to reproduce: systemctl snapshot

Expected behavior: systemd creates a snapshot named something like snapshot-%u.snapshot.

Actual behavior: systemd aborts at src/core/manager.c:1071 on assert(name || path);

This is present in latest git, and possibly goes back several years.
Comment 1 Zbigniew Jedrzejewski-Szmek 2013-08-07 01:33:06 UTC
Fixed in http://cgit.freedesktop.org/systemd/systemd/commit/?id=ebec578.

> This is present in latest git, and possibly goes back several years.
Why all this pessimism? It only goes back 36 days.

commit a190eeb884840e1a431e22eee2c3b93c96ca7fa3
Author: Lennart Poettering <lennart@poettering.net>
Date:   Mon Jul 1 00:02:03 2013 +0200

    snapshot: snapshots are just a special kind of transient units now
Comment 2 Dave Reisner 2013-08-07 02:05:32 UTC
Not being intentionally pessimistic, just what I had gleaned from a quick review of git blame. Thanks for the quick debug.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.