systemd: fix segv in snapshot creation

https://bugs.freedesktop.org/show_bug.cgi?id=67848